# CPP-projects

./: CMakeLists.txt  Makefile  README.md  list_functions.c  main.c  makefile  mylist.h  readme.md  ship_data2.txt  ship_functions.c  ship_header.h  test.cpp  test_examp.txt
data/: data.txt  patt.txt
libs/linear_lib/: Linear_search.c  Linear_search.h
libs/parallel_lib/: Parallel_search.c  Parallel_search.h
project/: main.c
project/include/: main.h  main.h.in
project/lib/: CMakeLists.txt
project/lib/coding_features/: CMakeLists.txt
project/lib/coding_features/include/: CodingFeatures.h
project/lib/coding_features/src/: CodingFeatures.c
project/lib/consistent/: CMakeLists.txt
project/lib/consistent/include/: Errors.h  FileMapper.h  Search.h
project/lib/consistent/src/: FileMapper.c  Search.c
project/lib/count_symbols_interface/: CMakeLists.txt
project/lib/count_symbols_interface/include/: CountSymbols.h
project/lib/parallel/: CMakeLists.txt
project/lib/parallel/include/: Errors.h  FileMapper.h  MyMsg.h  ProcessFunctions.h
project/lib/parallel/src/: FileMapper.c  ProcessFunctions.c
project/src/: CMakeLists.txt
project/src/cars/: CMakeLists.txt  UI_functions.c  data_loader.c  data_saver.c  metric.c
project/src/cars/include/: UI_functions.h  cars_functions.h  data_loader.h  data_saver.h  metric.h  models_backs.h
project/src/cars_low_level/: CMakeLists.txt  car_db_functions.c
project/src/cars_low_level/include/: car_db_functions.h
src/filler/: a.out  tester.c
src/system/: sys_info.c  sys_info.h
src/unit_testing/: CMakeLists.txt  tests.cpp
src/vector/: vector.c  vector.h
tests/: CMakeLists.txt  test_car_low_level.cpp  test_cars_lib.cpp
tests/data/: data.txt  prompt.txt
tests/data_for_tests/: file1.txt  file3.txt
tests/stress-test/: CMakeLists.txt
tests/stress-test/include/: ExeclArgsCreater.h  TimeItExecl.h  data_path.h  data_path.h.in
tests/stress-test/src/: ExeclArgsCreater.c  TimeItExecl.c  stress_test.c
tests/unittests/: CMakeLists.txt
tests/unittests/src/: test_coding.cpp  test_consistent.cpp  test_parallel.cpp
